added button to just show result

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ function load() {
 <button onclick="load();">&#x21bb; Reset</button>
 <button onclick="BF.step()">&#10704; Step</button>
 <button onclick="BF.run()">&#9658; Run</button>
+<button onclick="BF.runToEnd()">&#x2713; Résultat</button>
 <br /><br />
 <fieldset>
  <legend>Memory</legend>
